--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,11 @@ nohup.out
 pg_data/*
 
 #################
+## npm & bower
+#################
+node_modules
+
+#################
 ## Eclipse
 #################
 
